# esportesaude

./: .replit  arquivo_morto_candidatos.csv  auditoria.py  backup_alunos_antes_migracao_20260501_224325.csv  backup_alunos_antes_migracao_20260502_131948.csv  backup_alunos_antes_migracao_20260502_132035.csv  backup_alunos_antes_migracao_20260502_133653.csv  backup_alunos_antes_migracao_20260502_134515.csv  backup_alunos_antes_migracao_20260502_144748.csv  backup_expurgo_final_20260503_113834.csv  database.py  db_academico.py  db_clinico.py  db_core.py  ficha_aluno_view.py  fix_turmas.py  gerador_pdf.py  gerador_word.py  identidade.json  importar_niver.py  log_expurgo_20260503_065500.csv  main.py  migraimbra2_2.csv  normalizacao_bd.sql  pnpm-lock.yaml  poc_biometria.py  portal_telas.py  pyproject.toml  relatorio_diarios.py  replit.md  replit.nix  requirements.txt  resultado_migracao_20260502_133653.txt  resultado_migracao_20260502_134514.txt  resultado_migracao_20260502_144747.txt  script_migracao.py  sql_anamnese_dores.sql  super_trator.py  sync_dados.py  templates_view.py
.agents/: agent_assets_metadata.toml
.streamlit/: config.toml  secrets.toml
attached_assets/: Pasted--WARNING-This-schema-is-for-context-only-and-is-not-mea_1777785282640.txt  Pasted--nome-cadastrado-em--1777786531012_1777786531013.txt  Pasted-Ol-Parece-que-o-seu-Replit-encontrou-um-problema-ao-ins_1777764348841.txt  tab_tablet_1776359420482.py
doc/: caminho.txt
modulos_frequencia/: tab_diario.py  tab_dossie.py  tab_emergencia.py  tab_inscricao.py  tab_lista.py  tab_niver.py  tab_tablet.py
(+28 files in other folders)
