[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "deepface>=0.0.99",
    "opencv-python-headless>=4.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "python-docx>=1.2.0",
    "qrcode[pil]>=8.0",
    "streamlit>=1.55.0",
    "streamlit-keyup>=0.3.0",
    "supabase>=2.28.2",
    "tf-keras>=2.19.0",
    "xhtml2pdf>=0.2.11",
    "xlsxwriter>=3.2.9",
]
